# project-calidad-software

./: .dockerignore  .env.local  00-LEEME-PRIMERO.md  00-LEEME-TABLAS-DYNAMODB.md  ARQUITECTURA.md  CAMBIOS_LOCALSTACK.md  CHANGELOG.md  COMIENZA_AQUI.md  DOCKER_SETUP.md  GUIA_PASO_A_PASO.md  INICIO_RAPIDO_LOCALSTACK.md  Makefile  README.md  RESUMEN_EJECUTIVO.md  RESUMEN_FINAL.txt  RESUMEN_TABLAS_DYNAMODB.md  TABLAS_DYNAMODB.md  deploy_k8s.sh  docker-compose-prod.yml  docker-compose.yml  setup-local.sh  test-localstack-dynamodb.sh  validate-setup.sh  verify-dynamodb-tables.sh
auth/: .env  COMANDOS_PYTEST.md  Dockerfile  GUIA_RAPIDA_TESTS.md  RESUMEN_PRUEBAS_UNITARIAS.md  main.py  pyproject.toml  requirements.txt
auth/auth.egg-info/: SOURCES.txt
auth/configuration/: database.py
auth/controller/: __init__.py
auth/tests/: conftest.py
auth/tests/integration-test/: GUIA_RAPIDA_INTEGRACION.md  README.md  __init__.py  conftest.py  test_auth_integration.py
auth/tests/unit-test/: __init__.py
auth/tests/unit-test/controller/: README.md  __init__.py  test_auth_controller.py
auth/tests/unit-test/repository/: README.md  __init__.py  test_auth_repository.py
auth/tests/unit-test/service/: README.md  __init__.py  test_auth_service.py
k8s/: auth-deployment.yaml  users-deployment.yaml
localstack-init/: README.md  init-dynamodb-tables.sh
production/: change_auth_plugin.sql
users/: Dockerfile  README.md
users/app/: main.py  requirements.txt
users/db/: 00-change-auth-plugin.sql  create_tables.sql  delete_and_create_tables.sql  get_user_academic_data.sql  (+2 more)
(+99 files in other folders)
